# Cid-SSH

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILATION.md  Dockerfile_linux_static  README.md  SSHIUU.sln  appveyor.yml  build.sh  dh.pem  gnome-video-codec
.circleci/: config.yml
.github/workflows/: ci-macos.yml  ci-windows.yml  ci.yml
SSHIUU/: SSHIUU.vcxproj  SSHIUU.vcxproj.filters  test.c
ext/: CMakeLists.txt
ext/beastsocks/: CMakeLists.txt  README
libs/: libssh_x86_MT_Debug.lib  libssh_x86_MT_Release.lib
src/: CMakeLists.txt  CidSSH.cpp  README.md  SSHIUU.cpp  client.cpp  client.cpp.orig  client.h  config.h.cmake  global.c  global.cpp  global.h  obfuscated_strings.h  server.cpp  server.cpp.orig  server.h  shell-host.c  shell-host.c.orig  shell-host.h  shell-host.h.orig  socks_proxy.c  socks_proxy.h  socks_proxy.h.orig  sts_queue.c  sts_queue.h
src/controller/: CMakeLists.txt  CMakeSettings.json  README.md  VariadicTable.h  main.cpp  sshpass.c  sshpass.h
src/malware/: AntivirusEvasion.cpp  AntivirusEvasion.h  C2Connection.cpp  C2Connection.h  CMakeLists.txt  CidSSH.cpp  CidSSHClient.cpp  CidSSHClient.h  CidSSHServer.cpp  CidSSHServer.h  README.md  client.cpp  client.h  global.h  obfuscated_strings.h  server.cpp  server.h  socks_proxy.c  socks_proxy.h  sts_queue.c  sts_queue.h  utils.cpp  utils.h
src/malware/websockets/: CMakeLists.txt  cid_websockets.cpp  cid_websockets.h  proxy.cpp  proxy.h  wrapper.cpp
src/malware/websockets/include/: websocketswrapper.h
src/malware/websockets/include/wsinternal/: bridge.h
src/malware/websockets/ws_proxy_server/: CMakeLists.txt  tcp_proxy.h  ws_proxy_server.cpp  ws_proxy_server.h
src/malware/websockets/ws_wrapper/: cid_websockets.cpp  cid_websockets.h  proxy.cpp  proxy.h
src/websockets/: CMakeLists.txt  README.md  acceptor.cpp  bridge.cpp  tcpconn.cpp  uri.cpp  wrapper.cpp  wsconn.cpp
src/websockets/include/: httpconnect.hpp  websocketswrapper.h
src/websockets/include/wsinternal/: acceptor.h  bridge.h  tcpconn.h  uri.h  wsconn.h
src/websockets/libproxy/: CMakeLists.txt  README.md  extension_config.hpp  extension_pacrunner.cpp  extension_pacrunner.hpp  url.cpp  url.hpp
src/websockets/libproxy/cmake/: devfiles.cmk  libproxy.cmk  modules.cmk
src/websockets/libproxy/cmake/modules/: config_kde.cmk
src/websockets/libproxy/libmodman/: CMakeLists.txt
src/websockets/libproxy/modules/: config_gnome3.cpp  config_kde.cpp  pacrunner_duktape.cpp  wpad_dns_alias.cpp
src/websockets/ws_proxy_server/: ws_proxy_server.h
src/wsproxyserver/: CMakeLists.txt  README.md  server.cpp  ws_proxy_server.cpp  ws_proxy_server.h
